--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,18 @@
-<p>home works!</p>
+<br>
+<b>Amigos</b>
+<ng-container *ngFor = "let user of friends; let i = index">
+    <div *ngIf = "user.friend">
+        <a routerLink="/conversation/{{user.uid}}" >
+           {{i}}.  {{user.nick}} - {{user.email}}
+        </a>
+    </div>
+</ng-container>
+
+<b>Sin agregar</b>
+<ng-container *ngFor = "let user of friends; let i = index">
+    <div *ngIf = "!user.friend">
+        <a routerLink="/conversation/{{user.uid}}" >
+            {{i}}.  {{user.nick}} - {{user.email}}
+        </a>
+    </div>
+</ng-container>
