--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
-<app-menu></app-menu>
-<router-outlet></router-outlet>
+<app-menu *ngIf="router.url != '/login'"></app-menu>
+<div [ngClass] = "{ 'generalContent': router.url != '/login' }">
+  <router-outlet></router-outlet>
+</div>
+
+<!-- [ngClass] = ""{ '<generalContent': router.url != '/login'> }"" -->
