--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,13 +1,44 @@
-<input type="text" placeholder="Buscar Amigo" [(ngModel)] = "query">
-<br>
-<b>Amigos</b>
-<ng-container *ngFor = "let user of friends | search: query; let i = index">
-    <div>
-        <a routerLink="/conversation/{{user.uid}}" >
-           {{i}}.  {{user.nick}} - {{user.email}}
-        </a>
+<div id="homeContainer">
+    <div class="whiteBorderGlassBox">
+        <div class="homeHeadContainer">
+            <div class="row">
+                <div class="col-md-auto">
+                    <div class="avatarFrameonline">
+                        <img src="assets/img/generic_avatar.png"id="homeAvatarPicture" />
+                    </div>
+                </div>
+                <div class="col">
+                    <b>Eduardo</b>
+                    <div>
+                        <span>Online</span>
+                        <br>
+                        <span>< Escribe un mensaje personal ></span>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-</ng-container>
+    <div class="whiteContainerPadded marto15">
+        <div class="row">
+            <div class="col">
+                <input type="text" class="form-control" placeholder="Buscar Amigo" [(ngModel)] = "query">
+            </div>
+            <div class="col-md-auto">
+                <img src="assets/img/logo_live_add.png" class="icon" alt="">
+            </div>
+        </div>
+        <hr>
+        <b>Amigos ({{friends.length}}/{{friends.length}})</b>
+        <div *ngFor = "let user of friends | search: query; let i = index" class="disable marbo5" >
+                <span routerLink="/conversation/{{user.uid}}" >
+                    <img class="icon" src="assets/img/logo_live_{{user.status}}.png" alt="{{user.status}}"> <b>{{user.nick}}</b> - {{user.subnick || 'No subnick'}}
+                    <small>{{user.email}}</small>
+                </span>
+        </div>
+    </div>
+</div>
+
+
 
 <!-- <b>Sin agregar</b>
 <ng-container *ngFor = "let user of friends; let i = index">
