--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,29 @@
-<p>login works!</p>
+<div class="loginContainer">
+  <div class="container">
+    <div class="row justify-content-md-center">
+      <div class="col-md-3">
+        <div class="avatarFrameOffline marto15 marbo15">
+          <img src="assets/img/generic_avatar.png"class="avatarImage img-fluid" />
+        </div >
+      </div>
+    </div>
+    <div class="row justify-content-md-center">
+        <div class="col-md-6">
+            <div class="center">
+                <h3>Iniciar Sesión</h3> 
+            </div>
+            <p *ngIf="operation == 'register'">Ya tienes cuenta? Has <a (click)="operation='login'">login</a> </p>
+            <p *ngIf="operation == 'login'">No tienes cuenta? <a (click)="operation='register'">Registrarse</a> </p>
+            <div class="borderesContainer">
+                <input [(ngModel)] = "email" class="form-control marbo15" type="email" placeholder="Ingrese email" >
+                <input [(ngModel)] = "password" class="form-control marbo15" type="password" placeholder="Ingrese contraseña" >
+                <input *ngIf="operation == 'register'" class="form-control marbo15" type="text" placeholder="Ingrese nick" >
+            </div>
+            <div class="center">
+                <a (click)="login()" *ngIf="operation == 'login'" class="btn btn-primary marto15">Iniciar Sesión</a>
+                <a (click)="register()" *ngIf="operation == 'register'" class="btn btn-primary marto15">Registrarme</a>
+            </div>
+        </div>
+    </div>
+  </div>
+</div>
