--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,10 +1,9 @@
-<!-- <i class="fab fa-accusoft">
-    holalalal
-</i>
-<fa name="cog" animation="spin">miuu</fa> -->
-<!-- <fa name="cog" animation="spin"></fa> -->
-<img id= "main-logo" src="assets/img/logo_live.png" alt="Logo de platzonger">
-<a routerLink="/home">home</a> |
-<a routerLink="/profile">profile</a> |
-<a routerLink="/login">login</a>
-
+<div id="menuConteiner">
+  <div class="item branding" routerLink="/home">
+    <img id="main-logo" src="assets/img/logo_live.png" alt="Logo de Platzinger"/>
+    Platzinger
+  </div>
+  <div class="item" routerLink="/profile">
+    Profile
+  </div>
+</div>    
