--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,70 @@
 /* You can add global styles to this file, and also import other style files */
+.avatarFrameOffline{
+    background: rgba(235,233,249,1);
+    background: -moz-linear-gradient(left, rgba(235,233,249,1) 0%, rgba(216,208,239,1) 50%, rgba(206,199,236,1) 51%, rgba(193,191,234,1) 100%);
+    background: -webkit-gradient(left top, right top, color-stop(0%, rgba(235,233,249,1)), color-stop(50%, rgba(216,208,239,1)), color-stop(51%, rgba(206,199,236,1)), color-stop(100%, rgba(193,191,234,1)));
+    background: -webkit-linear-gradient(left, rgba(235,233,249,1) 0%, rgba(216,208,239,1) 50%, rgba(206,199,236,1) 51%, rgba(193,191,234,1) 100%);
+    background: -o-linear-gradient(left, rgba(235,233,249,1) 0%, rgba(216,208,239,1) 50%, rgba(206,199,236,1) 51%, rgba(193,191,234,1) 100%);
+    background: -ms-linear-gradient(left, rgba(235,233,249,1) 0%, rgba(216,208,239,1) 50%, rgba(206,199,236,1) 51%, rgba(193,191,234,1) 100%);
+    background: linear-gradient(to right, rgba(235,233,249,1) 0%, rgba(216,208,239,1) 50%, rgba(206,199,236,1) 51%, rgba(193,191,234,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ebe9f9', endColorstr='#c1bfea', GradientType=1 );
+    text-align: center;
+    padding: 5%;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    border: 1px solid white;
+    display: inline-block;
+  }
+  .avatarFrameonline{
+    background: rgba(210,255,82,1);
+    background: -moz-linear-gradient(left, rgba(210,255,82,1) 0%, rgba(145,232,66,1) 100%);
+    background: -webkit-gradient(left top, right top, color-stop(0%, rgba(210,255,82,1)), color-stop(100%, rgba(145,232,66,1)));
+    background: -webkit-linear-gradient(left, rgba(210,255,82,1) 0%, rgba(145,232,66,1) 100%);
+    background: -o-linear-gradient(left, rgba(210,255,82,1) 0%, rgba(145,232,66,1) 100%);
+    background: -ms-linear-gradient(left, rgba(210,255,82,1) 0%, rgba(145,232,66,1) 100%);
+    background: linear-gradient(to right, rgba(210,255,82,1) 0%, rgba(145,232,66,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d2ff52', endColorstr='#91e842', GradientType=1 );
+    text-align: center;
+    padding: 5%;
+    border-radius: 10px;
+    border: 1px solid lime;
+    display: inline-block;
+  }
+  .center{
+      text-align: center !important;
+  }
+  .marto15{
+      margin-top: 15px;
+  }
+  .marbo15{
+      margin-bottom: 15px;
+  }
+  .marbo5{
+      margin-bottom: 5px;
+  }
+  .generalContent {
+    margin-top: 56px;
+  }
+  #homeAvatarPicture{
+     max-width: 100px; 
+  }
+  .disblo{
+      display: block !important;
+  }
+  input[type="file"]{
+      display: none;
+  }
+  .custom-File-upload{
+    background: rgba(183,222,237,1);
+    background: -moz-linear-gradient(-45deg, rgba(183,222,237,1) 0%, rgba(113,206,239,0.82) 31%, rgba(101,202,237,0.8) 34%, rgba(33,180,226,0.8) 51%, rgba(183,222,237,0.8) 100%);
+    background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(183,222,237,1)), color-stop(31%, rgba(113,206,239,0.82)), color-stop(34%, rgba(101,202,237,0.8)), color-stop(51%, rgba(33,180,226,0.8)), color-stop(100%, rgba(183,222,237,0.8)));
+    background: -webkit-linear-gradient(-45deg, rgba(183,222,237,1) 0%, rgba(113,206,239,0.82) 31%, rgba(101,202,237,0.8) 34%, rgba(33,180,226,0.8) 51%, rgba(183,222,237,0.8) 100%);
+    background: -o-linear-gradient(-45deg, rgba(183,222,237,1) 0%, rgba(113,206,239,0.82) 31%, rgba(101,202,237,0.8) 34%, rgba(33,180,226,0.8) 51%, rgba(183,222,237,0.8) 100%);
+    background: -ms-linear-gradient(-45deg, rgba(183,222,237,1) 0%, rgba(113,206,239,0.82) 31%, rgba(101,202,237,0.8) 34%, rgba(33,180,226,0.8) 51%, rgba(183,222,237,0.8) 100%);
+    background: linear-gradient(135deg, rgba(183,222,237,1) 0%, rgba(113,206,239,0.82) 31%, rgba(101,202,237,0.8) 34%, rgba(33,180,226,0.8) 51%, rgba(183,222,237,0.8) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b7deed', endColorstr='#b7deed', GradientType=1 );
+    display: inline-block;
+    padding: 6px 12px;
+    cursor: pointer;
+    border: 1px solid #8dd2f3;
+  }
